bar: fixed z-index issue when some panels are already in FLOAT mode when the page is loaded. [Closes #269]

--- a/src/Tracy/assets/Bar/bar.css
+++ b/src/Tracy/assets/Bar/bar.css
@@ -205,7 +205,6 @@ body#tracy-debug { /* in popup window */
 	background: white;
 	color: #333;
 	text-align: left;
-	z-index: 20001;
 }
 
 body#tracy-debug .tracy-panel { /* in popup window */
